--- a/.github/workflows/subgraph-check.yml
+++ b/.github/workflows/subgraph-check.yml
@@ -22,18 +22,18 @@ jobs:
   
       - name: Rover Subgraph Check Products
         run: | 
-          rover subgraph check ${{vars.ACTOR}}${{ env.GEN }}@current \
+          rover subgraph check api-days-nyc-2024@current \
             --name products \
             --schema ./products-schema.graphql
   
       - name: Rover Subgraph Check Orders
         run: | 
-          rover subgraph check ${{vars.ACTOR}}${{ env.GEN }}@current \
+          rover subgraph check api-days-nyc-2024@current \
             --name orders \
             --schema ./orders-schema.graphql
   
       - name: Rover Subgraph Check Customers
         run: |
-          rover subgraph check ${{vars.ACTOR}}${{ env.GEN }}@current \
+          rover subgraph check api-days-nyc-2024@current \
             --name customers \
             --schema ./final/customers-schema.graphql
