--- a/router/router.yaml
+++ b/router/router.yaml
@@ -12,8 +12,7 @@ homepage:
   enabled: false
 
 cors:
-  origins:
-    - https://studio.apollographql.com
+  allow_any_origin: true
   allow_credentials: true
 
 # This would make debugging easier, but should be a per subgraph basis for production
